--- a/ProjBibleteria/ProjBibleteria.csproj
+++ b/ProjBibleteria/ProjBibleteria.csproj
@@ -73,12 +73,8 @@
     <Content Include="CadastroBilhete.aspx" />
     <Content Include="css\bootstrap.min.css" />
     <Content Include="Default.aspx" />
-    <Content Include="js\bootbox.min.js" />
-    <Content Include="js\bootstrap.js" />
-    <Content Include="js\bootstrap.min.js" />
-    <Content Include="js\jquery-2.1.1.min.js" />
-    <Content Include="js\jquery.validate.js" />
-    <Content Include="js\script.js" />
+    <Content Include="img\delete_4219.png" />
+    <Content Include="img\DocumentEdit_40924.png" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
